apps/node-app/overlays/dev-test/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "11"
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: node-app
  name: node-app
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: "kubernetes.internal"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: node-app
                port:
                  number: 8000
